# eduxEngine

./: .gitignore  CMakeLists.txt  imgui.ini
MockModel0/: mock_model.json  mock_model.meta.json
MockModel0/meshes/: mock_mesh.meta.json
MockModel0/textures/: mock_texture.meta.json
MockModel1/: mock_model.json  mock_model.meta.json
MockModel1/meshes/: mock_mesh.meta.json
MockModel1/textures/: mock_texture.meta.json
MockModel2/: mock_model.json  mock_model.meta.json
MockModel2/meshes/: mock_mesh.meta.json
MockModel2/textures/: mock_texture.json  mock_texture.meta.json
MockModel3/: mock_model.json  mock_model.meta.json
MockModel4/: mock_model.json  mock_model.meta.json
MockModel5/: mock_model.json  mock_model.meta.json
MockModel6/: mock_model.json  mock_model.meta.json
MockModel7/: mock_model.json  mock_model.meta.json
MockModel8/: mock_model.json  mock_model.meta.json
MockModel9/: mock_model.json  mock_model.meta.json
Module1/: Game.cpp  Game.hpp  main.cpp
shaders/: phong_frag.glsl
src/: AssetIndex.hpp  AssimpImporter.cpp  BatchRegistry.cpp  BatchRegistry.hpp  Engine.cpp  Engine.hpp  EngineFactory.cpp  EngineFactory.hpp  ForwardRenderer.cpp  GLDebugMessageCallback.cc  GameBase.h  Guid.h  Handle.h  ImGuiBackendSDL.cpp  ImGuiBackendSDL.hpp  InputManager.cpp  MainThreadQueue.hpp  Storage.hpp  config.h
tests/: CMakeLists.txt  EventQueue_tests.cpp  MetaFieldAssign_tests.cpp  MetaSerialize_tests.cpp  MetaThreading_tests.cpp  Meta_tests.cpp  PoolAllocatorFH_tests.cpp  PoolAllocatorTFH_tests.cpp  Storage_tests.cpp  VecTree_tests.cpp
(+178 files in other folders)
